--- a/amor.html
+++ b/amor.html
@@ -70,8 +70,8 @@
     <img src="foto.jpg" alt="Nosotros">
 
     <p>
-        No soy de hacer cosas exageradas,
-        pero quería hacer algo bonito para ti.
+        No lo habia olvidado mi amor,
+        siempre tratare de enamorarte cada dia mas hasta el ultimo dia.
     </p>
 
     <p>
@@ -81,7 +81,7 @@
 
     <p><strong>¿Quieres ser mi San Valentín? ❤️</strong></p>
 
-    <button id="btn">Sí quiero 💘</button>
+    <button id="btn">Sí quiero jeje</button>
 
     <div id="respuesta"></div>
 </div>
@@ -93,8 +93,8 @@ const respuesta = document.getElementById("respuesta");
 
 btn.addEventListener("click", function() {
     if (paso === 0) {
-        respuesta.innerHTML = "¿Estás segura? 😏";
-        btn.innerHTML = "Sí, segura ❤️";
+        respuesta.innerHTML = "¿Estás segura? no hay vuelta atras ";
+        btn.innerHTML = "Sí, segura papacito ❤️";
         paso++;
     } else {
         respuesta.innerHTML = "Sabía que dirías que sí. Gracias por estar en mi vida, prometo seguir cuidándote siempre. ❤️";
@@ -105,3 +105,4 @@ btn.addEventListener("click", function() {
 
 </body>
 </html>
+
